[tool.poetry]
name = "travelling-salesman"
version = "0.1.0"
description = ""
authors = ["viniciusdutra314 <dutravinisousa2@usp.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
cartopy = "^0.22.0"
typer = "^0.9.0"
rich = "^13.7.0"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
routingpy = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
